...
                    if landscapeIsCompact {
                        LandscapeMainScreenView(diaryViewModel: diaryViewModel, selectedEntry: $selectedEntry, showingDetailView: $showingDetailView, showingAddView: $showingAddView)
                    } else {
                        PortraitMainScreenView(diaryViewModel: diaryViewModel, selectedEntry: $selectedEntry, showingDetailView: $showingDetailView, showingAddView: $showingAddView)
                    }
                }
                .navigationTitle("Diary")
                .navigationBarItems(trailing: Button(action: {
                    self.showingAddView = true
                }, label: {
                    Image(systemName: "plus")
                }))
                .sheet(isPresented: $showingAddView) {
                    AddEntryDetailView(diaryViewModel: diaryViewModel, showingAddView: $showingAddView)
                }
                .sheet(isPresented: $showingDetailView) {
                    EntryDetailView(diaryViewModel: diaryViewModel, diaryEntry: $selectedEntry, isAddNewEntryScreen: false, showingDetailView: $showingDetailView)
...
