...
                        }
                        
                        Button(action: {
                            isFocused = false
                            isDatePickerVisible.toggle()
                        }, label: {
                            Image(systemName: "calendar")
                        })
                    }
                    .padding(.horizontal, 24.0)
                    
                    if isDatePickerVisible {
                        DatePickerView(selectedDate: $diaryEntry.date, isDatePickerVisible: $isDatePickerVisible)
...
                    
                    EnergyLevelView(diaryEntry: $diaryEntry)
                }
            }
            .photosPicker(isPresented: $isPhotosPickerVisible, selection: $photosPickerItem)
            .navigationTitle(
                isAddNewEntryScreen == true ? "Add entry" : DateFormatHelper.formatDate(date: diaryState.date, showWeekday: selectedDateFormatLong)
            )
            .navigationBarTitleDisplayMode(.inline)
            .toolbar{
                ToolbarItem(placement: .primaryAction) {
                    Menu {
                        Button(action: {
...
